examples/test/testpolicy14331.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14331
  namespace: namespace299
spec:
  podSelector:
    matchLabels:
      key49: value21
      key20: value13
      key32: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value31
      podSelector:
        matchLabels:
          key13: value2
